--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -27,7 +27,7 @@
                   </div>
                   <div class="mt-3 d-flex justify-content-between align-items-center">
                     <button type="submit" class="btn btn-block btn-gradient-primary btn-lg font-weight-medium auth-form-btn">SIGN IN</button>
-                    <a href="#" class="auth-link text-black">Forgot password?</a>
+                    <a href="/forgetpass" class="auth-link text-black">Forgot password?</a>
                   
                   </div>
                   <!-- <div class="my-2 d-flex justify-content-between align-items-center">
