--- a/views/email.ejs
+++ b/views/email.ejs
@@ -10,20 +10,9 @@
                 <div class="brand-logo">
                   <img src="../../assets/images/logo.svg">
                 </div>
-                <h4>Forget Password</h4>
-                <h6 class="font-weight-light">Enter Email</h6>
-                <form class="pt-3" action="/finduser" method="post">
-                  <div class="form-group">
-                    <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" name="email" placeholder="Email">
-                  </div>
-                  <div class="mt-3 d-flex align-items-center">
-                    <button type="submit" value="otp" name="choice" class="btn btn-block btn-gradient-primary btn-lg font-weight-medium auth-form-btn">SEND OTP</button>
-                    <button type="submit" value="token" name="choice" class="btn btn-block ms-3 btn-gradient-primary btn-lg font-weight-medium auth-form-btn">SEND LINK</button>
-                  
-                  </div>
-               
-                 
-                </form>
+                <h4>Reset Password Link Sent Successfully</h4>
+                <h6 class="font-weight-light">Please Check Your Registered Email</h6>
+                
               </div>
             </div>
           </div>
