--- a/views/resetpass.ejs
+++ b/views/resetpass.ejs
@@ -1,6 +1,6 @@
-<%- include('header')%>
+<%- include('headeredit')%>
 
-<body>
+  <body>
     <div class="container-scroller">
       <div class="container-fluid page-body-wrapper full-page-wrapper">
         <div class="content-wrapper d-flex align-items-center auth">
@@ -14,17 +14,21 @@
                 <h6 class="font-weight-light">New Password</h6>
                 <form class="pt-3" action="/getresetpass" method="post">
                   <div class="form-group">
-                    <input type="password" class="form-control form-control-lg" id="exampleInputEmail1" name="newpass" placeholder="New Password">
+                    <input type="text" value="<%= userId %>" name="userId" hidden>
+                    <input type="password" class="form-control form-control-lg" id="exampleInputEmail1" name="newpass"
+                      placeholder="New Password">
                   </div>
                   <div class="form-group">
-                    <input type="password" class="form-control form-control-lg" id="exampleInputEmail2" name="conpass" placeholder="Confirm Password">
+                    <input type="password" class="form-control form-control-lg" id="exampleInputEmail2" name="conpass"
+                      placeholder="Confirm Password">
                   </div>
                   <div class="mt-3 d-flex justify-content-between align-items-center">
-                    <button type="submit" class="btn btn-block btn-gradient-primary btn-lg font-weight-medium auth-form-btn">SEND</button>
-                  
+                    <button type="submit"
+                      class="btn btn-block btn-gradient-primary btn-lg font-weight-medium auth-form-btn">SEND</button>
+
                   </div>
-               
-                 
+
+
                 </form>
               </div>
             </div>
@@ -46,4 +50,5 @@
     <script src="../../assets/js/misc.js"></script>
     <!-- endinject -->
   </body>
-</html>
+
+  </html>
