--- a/views/sendotp.ejs
+++ b/views/sendotp.ejs
@@ -1,4 +1,4 @@
-<%- include('header')%>
+<%- include('headeredit')%>
 
 <body>
     <div class="container-scroller">
@@ -14,6 +14,7 @@
                 <h6 class="font-weight-light">Enter OTP</h6>
                 <form class="pt-3" action="/otpvalidation" method="post">
                   <div class="form-group">
+                    <input type="text" value="<%= userId %>" name="userId" hidden>
                     <input type="text" class="form-control form-control-lg" id="exampleInputEmail1" name="otp" placeholder="Enter OTP">
                   </div>
                   <div class="mt-3 d-flex justify-content-between align-items-center">
