--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -22,7 +22,7 @@
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/viewuserpost">
-                <span class="menu-title">User</span>
+                <span class="menu-title">User Post</span>
                 <i class="mdi mdi-contacts menu-icon"></i>
             </a>
         </li>
